--- a/ManualWebScraper.csproj
+++ b/ManualWebScraper.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
 	<PackageReference Include="CefSharp.Wpf.NETCore" Version="136.1.40" />
+	<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
   </ItemGroup>
 
   <ItemGroup>
