feat: added DI with ScriptResultsDispatcher to invoke handlers

--- a/ManualWebScraper.csproj
+++ b/ManualWebScraper.csproj
@@ -11,6 +11,8 @@
   <ItemGroup>
 	<PackageReference Include="CefSharp.Wpf.NETCore" Version="136.1.40" />
 	<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+	<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.5" />
+	<PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.5" />
   </ItemGroup>
 
   <ItemGroup>
