--- a/ManualWebScraper.csproj
+++ b/ManualWebScraper.csproj
@@ -13,6 +13,7 @@
 	<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 	<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.5" />
 	<PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.5" />
+	<PackageReference Include="Ookii.Dialogs.Wpf" Version="5.0.1" />
   </ItemGroup>
 
   <ItemGroup>
